src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>A1cReduction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Performance Guarantee Type: A1c Reduction</description>
        <inlineHelpText>Integrated with NetSuite</inlineHelpText>
        <label>A1c Reduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ability_to_run_ROI_analysis__c</fullName>
        <label>Ability to run ROI analysis?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_to_Employee_Emails__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that Livongo has access to employee emails for direct marketing</description>
        <inlineHelpText>Indicates that Livongo has access to employee emails for direct marketing</inlineHelpText>
        <label>Access to Employee Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accessible_Covered_Lives__c</fullName>
        <label>Accessible Covered Lives</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Client_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (Client Overview)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Overviews</relationshipLabel>
        <relationshipName>ClientOverviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Partner_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Partner Agreements to the Partner Accounts</description>
        <label>Account (Partner Agreement)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Agreements</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Program_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (Program Overview)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Overviews</relationshipLabel>
        <relationshipName>ProgramOverviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_has_SLAs__c</fullName>
        <label>Account has SLAs?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivateContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used behind the scenes by SpringCM to trigger a process flow that determines whether to flip Status to Activate or Re-Activate.</description>
        <inlineHelpText>This field is used behind the scenes by SpringCM to trigger a process flow that determines whether to flip Status to Activate or Re-Activate.</inlineHelpText>
        <label>Activate Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Checked if today’s date is &gt;= Contract Effective Date AND &lt;= Contract End Date</description>
        <formula>AND( TODAY() &gt;= StartDate, TODAY() &lt;=  ContractRenewalDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if today’s date is &gt;= Contract Effective Date AND &lt;= Contract End Date</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Launch_Date__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Initial Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_a_Union_Bug_to_Marketing_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add a Union Bug to Marketing Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_information__c</fullName>
        <description>Note any information that is not captured in other sections.</description>
        <inlineHelpText>Note any information that is not captured in other sections.</inlineHelpText>
        <label>Additional information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approach_to_health_and_wellness__c</fullName>
        <description>Programs client has in place, overall landscape, general weight status.</description>
        <inlineHelpText>Programs client has in place, overall landscape, general weight status.</inlineHelpText>
        <label>Approach to health and wellness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_there_marketing_DOPS_requirements__c</fullName>
        <description>JENGA-1174</description>
        <label>Are there marketing &amp; DOPS requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_No_Cost_to_You_Alt_Text__c</fullName>
        <description>Client preferred alternative to mention of &quot;at no cost to you&quot; in assets.</description>
        <inlineHelpText>Client preferred alternative to mention of &quot;at no cost to you&quot; in assets.</inlineHelpText>
        <label>At No Cost to You Alt Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automated_Enrollment_Injection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated Enrollment Injection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a BAA has been signed, as a part of or in addition to the active contract</description>
        <inlineHelpText>Indicates if a BAA has been signed, as a part of or in addition to the active contract</inlineHelpText>
        <label>BAA Signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavioral_Health_ID__c</fullName>
        <label>Behavioral Health ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Integrated with NetSuite</description>
        <inlineHelpText>Integrated with NetSuite</inlineHelpText>
        <label>Billing Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Billing Partner)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <description>Integrated with Redshift and NetSuite</description>
        <inlineHelpText>Integrated with Redshift and NetSuite</inlineHelpText>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Invoice through Enterprise / Client</fullName>
                </value>
                <value>
                    <fullName>Direct Invoice through Partner / Payer</fullName>
                </value>
                <value>
                    <fullName>Medical Claims TPA/ASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_POC__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Point Of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Billing POC)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Partner_Admin_Fee__c</fullName>
        <description>For Finance/Billing to capture the admin fee to be paid to the Billing Partner for a particular program. Integrated with NetSuite and Redshift.</description>
        <inlineHelpText>Integrated with NetSuite and Redshift</inlineHelpText>
        <label>Billing Partner Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Partner_Fee_Type__c</fullName>
        <label>Billing Partner Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BundledPricingDiscount__c</fullName>
        <description>This is the dollar amount discount that is to be used in calculated the bundled pricing in Netsuite.</description>
        <inlineHelpText>Integrated with NetSuite</inlineHelpText>
        <label>Bundled Pricing Discount</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Review_Stipulations__c</fullName>
        <description>Describes any requirements around regular business reviews. May provide link to partner scorecard template.</description>
        <inlineHelpText>Describes any requirements around regular business reviews. May provide link to partner scorecard template.</inlineHelpText>
        <label>Business Review Stipulations</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CIM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Client Implementation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Overviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Name_Number__c</fullName>
        <formula>Name + &quot; (&quot; + ContractNumber + &quot;)&quot;</formula>
        <label>CO Name + Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Client Success Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Overviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Action_Required_for_Renewal__c</fullName>
        <description>Indicates how Client Success should engage with clients to renew contracts that are through this partnership</description>
        <inlineHelpText>Indicates how Client Success should engage with clients to renew contracts that are through this partnership</inlineHelpText>
        <label>CS Action Required for Renewal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVS_TDC_Eligibility_Criteria__c</fullName>
        <label>CVS/TDC Eligibility Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active Coverage</fullName>
                </value>
                <value>
                    <fullName>Medical Claims</fullName>
                </value>
                <value>
                    <fullName>Rx Claims</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Participation_EoA_Date__c</fullName>
        <description>Date when Enrollment on Autopilot was last added/removed from Campaign Participation.</description>
        <inlineHelpText>Date when Enrollment on Autopilot was last added/removed from Campaign Participation.</inlineHelpText>
        <label>Campaign Participation EoA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Participation_EoA_Include__c</fullName>
        <formula>INCLUDES( Campaign_Participation__c, &quot;Enrollment on Autopilot&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Participation EoA Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Participation_TLC_Date__c</fullName>
        <description>Date when &quot;TLC&quot; was last added/removed from Campaign Participation.</description>
        <inlineHelpText>Date when &quot;TLC&quot; was last added/removed from Campaign Participation.</inlineHelpText>
        <label>Campaign Participation TLC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Participation_TLC_Included__c</fullName>
        <formula>INCLUDES( Campaign_Participation__c , &quot;TLC&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Participation TLC Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Participation__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Campaign Participation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2021 DM Reduced Plan</fullName>
                </value>
                <value>
                    <fullName>Custom Campaign</fullName>
                </value>
                <value>
                    <fullName>Enrollment on Autopilot</fullName>
                </value>
                <value>
                    <fullName>Optimized Enrollment Plan</fullName>
                </value>
                <value>
                    <fullName>Partnership Campaign</fullName>
                </value>
                <value>
                    <fullName>Partnership Downmarket Campaign</fullName>
                </value>
                <value>
                    <fullName>Phone Campaign no Cell</fullName>
                </value>
                <value>
                    <fullName>Phone Campaign with Cell</fullName>
                </value>
                <value>
                    <fullName>Pop Refresh</fullName>
                </value>
                <value>
                    <fullName>Relaunch</fullName>
                </value>
                <value>
                    <fullName>TLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claims_Configuration__c</fullName>
        <label>Claims Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Livongo Standard</fullName>
                </value>
                <value>
                    <fullName>Livongo MA</fullName>
                </value>
                <value>
                    <fullName>Milestone Claim</fullName>
                </value>
                <value>
                    <fullName>Rx Claim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Able_to_Send_HR_Comms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enrollment Marketing - Client Overview</description>
        <label>Client Able to Send HR Comms?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Able_to_Whitelist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enrollment Marketing field - Client Overview</description>
        <label>Client Able to Whitelist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Allows_AB_Testing_of__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Client Allows A/B Testing of:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Allows_Targeted_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Client Allows Targeted Marketing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Documentation_Structure__c</fullName>
        <description>Indicates how clients must be contracted through this partner</description>
        <inlineHelpText>Indicates how clients must be contracted through this partner</inlineHelpText>
        <label>Client Documentation Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Confirmation Schedule</fullName>
                </value>
                <value>
                    <fullName>Program Agreement</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Implementation_Status__c</fullName>
        <label>Client Implementation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Launched +90</fullName>
                </value>
                <value>
                    <fullName>Ongoing Delivery</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Incentive_Type__c</fullName>
        <label>Client Incentive Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HSA Contribution</fullName>
                </value>
                <value>
                    <fullName>Payroll Inclusion</fullName>
                </value>
                <value>
                    <fullName>No Copay for all Diabetes Meds</fullName>
                </value>
                <value>
                    <fullName>No Copay for all Generic Meds</fullName>
                </value>
                <value>
                    <fullName>Reduced Copay for Diabetes Meds</fullName>
                </value>
                <value>
                    <fullName>Required Participation for Premium Health Plan</fullName>
                </value>
                <value>
                    <fullName>Wellness points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Logo_Link__c</fullName>
        <description>Link to the client-approved logo for Marketing purposes</description>
        <inlineHelpText>Link to the client-approved logo for Marketing purposes</inlineHelpText>
        <label>Client Logo Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Must_Approve_Assets__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Client Must Approve Assets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Overview_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copies the Client Overview&apos;s Client Success Manager. Only used on Program Overview.</description>
        <label>Client Overview CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Overview_Id__c</fullName>
        <formula>Client_Overview__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Overview Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Overview_Status__c</fullName>
        <description>Copy for Client Overview&apos;s Status on Program Overview. Populated by workflow rule.</description>
        <inlineHelpText>Copy for Client Overview&apos;s Status on Program Overview. Populated by workflow rule.</inlineHelpText>
        <label>Client Overview Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Client Overview record to which an individual, program-specific Program Overview relates.</description>
        <inlineHelpText>The parent Client Overview contract record to which an individual, program-specific Program Overview relates. Integrated with Redshift.</inlineHelpText>
        <label>Client Overview</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a &quot;Client Overview&quot;</errorMessage>
            <filterItems>
                <field>Contract.RecordType.Name</field>
                <operation>equals</operation>
                <value>Client Overview</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Program Overviews</relationshipLabel>
        <relationshipName>ProgramOverviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Partner_Required_Tags__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates if the client or partner has tags in down stream database.</description>
        <label>Client/Partner Required Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Plan_Design_Inclusions__c</fullName>
        <label>Client Plan Design Inclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Diabetes Supplies – Basic (meter, test strips, etc.)</fullName>
                </value>
                <value>
                    <fullName>Diabetes supplies – Additional (insulin, etc.)</fullName>
                </value>
                <value>
                    <fullName>Preventative Visits covered in full</fullName>
                </value>
                <value>
                    <fullName>Discounted premium health plan with participation requirements</fullName>
                </value>
                <value>
                    <fullName>Points for Health Engagement Platform</fullName>
                </value>
                <value>
                    <fullName>VBID Program (Medication Copay) with PBM</fullName>
                </value>
                <value>
                    <fullName>Livongo enrollment required to remain on top-tier health plans</fullName>
                </value>
                <value>
                    <fullName>Co-insurance/Copay to join Livongo</fullName>
                </value>
                <value>
                    <fullName>Other Incentive(s)</fullName>
                </value>
                <value>
                    <fullName>High Deductible Health Plan</fullName>
                </value>
                <value>
                    <fullName>Health and Wellness Engagement Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Renewal_Terms__c</fullName>
        <description>Indicates the client renewal terms per the Partner Agreement</description>
        <label>Client Renewal Terms</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Termination_Notice_Period__c</fullName>
        <description>Indicates the time frame that the CS team needs to notify clients of renewal, per the Partner Agreement</description>
        <label>Client Termination Notice Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_expects_ROI__c</fullName>
        <label>Client Expects ROI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clients_Can_Contract_Through_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if Partner Account can be a &quot;Contract Path&quot; for clients</description>
        <inlineHelpText>Indicate if Partner Account can be a &quot;Contract Path&quot; for clients</inlineHelpText>
        <label>Clients Can Contract Through Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_Data_Sharing_and_Access__c</fullName>
        <label>Clinical Data Sharing and Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Clinical Portal - Care Coordination</fullName>
                </value>
                <value>
                    <fullName>Clinical Portal - Shared Coaching</fullName>
                </value>
                <value>
                    <fullName>Reporting/File Share</fullName>
                </value>
                <value>
                    <fullName>API Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_Model_Details__c</fullName>
        <label>Clinical Model Details</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clinical_Model__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Clinical Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Care Coordination</fullName>
                </value>
                <value>
                    <fullName>Shared Coaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_Referrals__c</fullName>
        <label>Clinical Referrals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One directional (inbound to Livongo)</fullName>
                </value>
                <value>
                    <fullName>Bi-Directional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_branding_Channels__c</fullName>
        <description>Client preferences on channels for logo inclusion</description>
        <inlineHelpText>Client preferences on channels for logo inclusion</inlineHelpText>
        <label>Co-branding Channels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DMM</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print/offline</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_branding_Preferences__c</fullName>
        <description>Client preferences on logo inclusion</description>
        <inlineHelpText>Client preferences on logo inclusion</inlineHelpText>
        <label>Co-branding Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                    <default>true</default>
                    <label>Client</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Language_Preference__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Communication Language Preference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English Only</fullName>
                </value>
                <value>
                    <fullName>Bilingual Communications (Spanish)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_Per_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Per Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consecutive_Inactive_Months_to_Lapsed__c</fullName>
        <description>Integrated with NetSuite and Redshift</description>
        <inlineHelpText>Integrated with NetSuite and Redshift</inlineHelpText>
        <label>Consecutive Inactive Months to Lapsed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractRenewalDate__c</fullName>
        <description>Date the Client must indicate whether they intend to renew</description>
        <inlineHelpText>Date the Client must indicate whether they intend to renew</inlineHelpText>
        <label>Program Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <description>Date the Client Overview becomes effective.</description>
        <inlineHelpText>Integrated with NetSuite</inlineHelpText>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
</CustomObject>